fix issue where clicking on a card name where the type header is offscreen could cause the screen to scroll up unexpectedly

--- a/src/App.css
+++ b/src/App.css
@@ -106,3 +106,8 @@ ion-text {
 ion-card {
 	--color: #bf909f;
 }
+
+ion-content {
+	bottom: 0;
+	padding-bottom: calc(var(--padding-bottom) + var(--keyboard-offset) + var(--tab-bar-height));
+}
